--- a/App/Admin/View/Category/index.html
+++ b/App/Admin/View/Category/index.html
@@ -56,7 +56,7 @@
                     success: function(result){
                         if(result.success){
                             alert('删除成功！');
-                            window.localtion.reload();
+                            window.location.reload();
                         } else {
                             alert(result.msg);
                         }
